--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Quiz App</string>
     <string name="please_enter_your_name">Please enter your name</string>
     <string name="welcome">Welcome</string>
@@ -24,4 +24,39 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="july_4th_1776">July 4th,1776</string>
+    <string name="play_again">play_again</string>
+    <string name="find_a_new_quiz">find_a_new_quiz</string>
+    <string name="streak">streak</string>
+    <string name="incorrect">incorrect</string>
+    <string name="performance_stats" />
+    <string name="correct" />
+    <string name="unattempted">unattempted</string>
+    <string name="_0">0%</string>
+    <string name="summary">Summary</string>
+    <string name="create">create</string>
+    <string name="log_in_to_quizizz">Log in to Quizizz</string>
+    <string name="username" tools:ignore="DuplicateDefinition">Username</string>
+    <string name="sign_up">Sign up</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+    <string name="log_in">Log in</string>
+    <string name="password">Password</string>
+    <string name="categories">Categories</string>
+    <string name="animals">Animals</string>
+    <string name="save_the_earth">Save the Earth</string>
+    <string name="space_exploration">Space Exploration</string>
+    <string name="comets_amp_meteors"><![CDATA[Comets & Meteors]]></string>
+    <string name="nutrition">Nutrition</string>
+    <string name="plant">Plant</string>
+    <string name="history">History</string>
+    <string name="geography">Geography</string>
+    <string name="_1_5">1/5</string>
+    <string name="question">question</string>
+    <string name="option1">option1</string>
+    <string name="option2">option2</string>
+    <string name="option3">option3</string>
+    <string name="option4">option4</string>
+    <string name="create_account">Create Account</string>
+    <string name="accuracy">accuracy</string>
+    <string name="congratulations_name">Congratulations, name</string>
+    <string name="plants">plants</string>
 </resources>
